# GuruPix-App

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP_GuruPix_System_Design.md  package.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  availability.py  contexts.py  dependencies.py  events.py  ingest.py  items.py  profiles.py  reviews.py  system.py
backend/app/clients/: __init__.py  cache.py  google_oauth.py  redis.py
backend/app/core/: __init__.py  config.py  security.py  version.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/hooks/: __init__.py  handlers.py
backend/app/middleware/: __init__.py  auth.py  error.py  logging.py  rate_limit.py  request_id.py  session.py  timing.py
backend/app/schemas/: __init__.py  auth.py  availability.py  contexts.py  events.py  items.py  profile.py  reviews.py  system.py
backend/app/services/: __init__.py  auth.py  availability.py  contexts.py  events.py  ingestion.py  profile.py  reviews.py
backend/migrations/: README  env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_password_hash.py  003_seed_admin_user.py
backend/scripts/: seed_users.py
backend/tests/integration/: conftest.py  test_auth_integration.py  test_availability.py  test_contexts.py  test_db_migrations.py  test_events.py  test_health_endpoint.py  test_ingestion.py  test_item_schemas.py  test_oauth_integration.py  test_profiles.py  test_redis_integration.py  test_reviews.py
backend/tests/unit/: test_auth_middleware.py  test_auth_schemas.py  test_auth_service.py  (+15 more)
(+54 files in other folders)
