[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gurupix-backend"
version = "0.1.0"
description = "GuruPix API — hyper-personalized movie & TV recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "redis[hiredis]>=5.0,<6",
    "asyncpg>=0.29,<1",
    "greenlet>=3.0",
    "bcrypt>=4.0,<6",
    "PyJWT>=2.8,<3",
    "httpx>=0.26,<1",
    "email-validator>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.26,<1",
    "ruff>=0.1,<1",
    "black>=24.1,<25",
    "mypy>=1.8,<2",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(\.venv|__pycache__)
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
